--- a/game/test.html
+++ b/game/test.html
@@ -17,11 +17,11 @@
           <video id = "vid2" src="videos/bestending.mp4" autoplay="true"></video>
       </a-assets>
 
-      <a-entity id="helloworld" position="1 -1 -4">
+      <!-- <a-entity id="helloworld" position="1 -1 -4"> -->
            <!-- the line below references your video by placing it as a material of an object -->
-          <a-entity id="screen" geometry="primitive: plane" material="src: #vid1" position="-1 0.5 1" rotation="0 45 0"  width="2" height="2" depth="1">
-          </a-entity>
-      </a-entity>
+         <!--  <a-entity id="screen" geometry="primitive: plane" material="src: #vid1" position="-1 0.5 1" rotation="0 45 0"  width="2" height="2" depth="1">
+          </a-entity> -->
+      <!-- </a-entity> -->
 
       <a-entity position=".5 -4 -6">
         <a-entity id="0" geometry="primitive: plane" material="src: #img1" position="-1 0.5 1" rotation="0 45 0" cursor-listener width="1" height="1">
