--- a/game/index.html
+++ b/game/index.html
@@ -64,12 +64,11 @@
          <video id="killgood2" autoplay="true" src="videos/killgood2.mp4"></video>
          <video id="killnomal1" autoplay="true" src="videos/killnormal1.mp4"></video>
          <video id="killnormal2" autoplay="true" src="videos/killnormal2.mp4"></video>
+          <img id = "img1" src="../resources/images/mouse.png"></img>
       </a-assets>
 
       <a-entity id="game" position="0 -1 -8">
-        <a-entity id ="videoContainer">
-             <a-entity id="1" geometry="primitive: plane" position="-1 0.5 1" rotation="0 20 0" width="4" height="4">
-             </a-entity>
+        <a-entity id="0" geometry="primitive: plane" material="src: #img1" position="-1 0.5 1" rotation="0 45 0" cursor-listener width="1" height="1">
         </a-entity>
       </a-entity>
 <!-- <<<<<<< HEAD -->
