--- a/game/index.html
+++ b/game/index.html
@@ -142,7 +142,7 @@
 
       <ar-camera>
         <!-- Custom geometry must be created for crosshair -->
-        <a-entity id="myCursor" cursor="fuse:false; fuse-timeout: 1000"
+        <a-entity id="myCursor" cursor="fuse:true; fuse-timeout: 1000"
                     position="0 0 -0.1"
                     geometry="primitive: ring; radiusInner: 0.002; radiusOuter: 0.003"
                     material="color: #2E3A87; opacity:0.3;">
