--- a/game/index.html
+++ b/game/index.html
@@ -68,9 +68,8 @@
       </a-assets>
 
       <a-entity id="game" position="0 -1 -8">
-        <a-entity id="0" geometry="primitive: plane" material="src: #img1" position="-1 0.5 1" rotation="0 45 0" cursor-listener width="1" height="1">
-        </a-entity>
       </a-entity>
+      <a-video src="#averageending" width="9" height="5" position="0 2.2 2"></a-video> 
 <!-- <<<<<<< HEAD -->
       <ar-geopose id="Skiles" lla= "-84.395410 33.773619 290" userotation="false">
         <a-entity collada-model="#alienModel" id="alien1" class="alien01" position="0 0.5 1" alien-listener rotation="0 90 0" scale="100 100 100">
