--- a/game/index.html
+++ b/game/index.html
@@ -64,12 +64,13 @@
          <video id="killgood2" autoplay="true" src="videos/killgood2.mp4"></video>
          <video id="killnomal1" autoplay="true" src="videos/killnormal1.mp4"></video>
          <video id="killnormal2" autoplay="true" src="videos/killnormal2.mp4"></video>
-          <img id = "img1" src="../resources/images/mouse.png"></img>
       </a-assets>
 
       <a-entity id="game" position="0 -1 -8">
+        <a-entity id ="videoContainer">
+             
+        </a-entity>
       </a-entity>
-      <a-video src="#averageending" width="9" height="5" position="0 2.2 -2"></a-video> 
 <!-- <<<<<<< HEAD -->
       <ar-geopose id="Skiles" lla= "-84.395410 33.773619 290" userotation="false">
         <a-entity collada-model="#alienModel" id="alien1" class="alien01" position="0 0.5 1" alien-listener rotation="0 90 0" scale="100 100 100">
