--- a/game/index.html
+++ b/game/index.html
@@ -19,7 +19,7 @@
         <audio id="gunAudio" src="../resources/sounds/gunshot.mp3" ></audio>
         <audio id="reloadAudio" src="../resources/sounds/reloadaudio.wav"></audio>
         <audio id="gotPonitsAudio" src="../resources/sounds/gotPonitsAudio.wav"></audio>
-        <button id="videoControl" onclick="pauseVid()" type="button" style="display: none;">STOP</button>
+        <button id="videoControl" type="button" style="display: none;">PLAY</button>
 
         <div id="button">
           <img id="bt" src="../resources/images/button.png" width="50px" height="100px" onclick="playGunshot(); updateFirstscene();">
