--- a/game/test page/aframe.html
+++ b/game/test page/aframe.html
@@ -24,7 +24,7 @@
         <audio id="reloadAudio" src="../../resources/sounds/reloadaudio.wav" ></audio>
         <audio id="gotPonitsAudio" src="../../resources/sounds/gotPonitsAudio.wav" ></audio>
        <!--  <video id="myVideo" style="display: none;"></video> -->
-        <button id="videoControl" onclick="pauseVid()" type="button" style="display: none;">Close</button>
+        <button id="videoControl"  type="button" style="display: none;">PLAY</button>
         
 
         <div id="button" ><img id="bt" src="../../resources/images/button.png" width="50px" height="100px" onclick="playGunshot(); updateFirstscene();"></div>
@@ -81,7 +81,7 @@
       <a-entity id="game" position="0 -1 -8">
         <a-entity id ="videoContainer">
         </a-entity>
-         <a-video src="#averageending" width="16" height="9" position="0 2.2 2"></a-video>     
+            
         <a-entity collada-model="#alienModel" class="alien01" id="alien1" position="0 0.5 1" alien-listener rotation="0 0 0" scale="1 1 1">         
         </a-entity>
 
