--- a/game/index.html
+++ b/game/index.html
@@ -20,6 +20,7 @@
         <audio id="reloadAudio" src="../resources/sounds/reloadaudio.wav"></audio>
         <audio id="gotPonitsAudio" src="../resources/sounds/gotPonitsAudio.wav"></audio>
         <button id="videoControl" type="button" style="display: none;">PLAY</button>
+        <button id="introVideo" type="button">PLAY</button>
 
         <div id="button">
           <img id="bt" src="../resources/images/button.png" width="50px" height="100px" onclick="playGunshot(); updateFirstscene();">
@@ -55,6 +56,7 @@
       </a-assets>
 
       <a-assets>
+         <video id="intro" autoplay="true" src="videos/intro.mp4"></video>
          <video id="averageending" autoplay="true"  src="videos/averageending.mp4"></video>
          <video id="badending" autoplay="true" src="videos/badending.mp4"></video>
          <video id="bestending" autoplay="true" src="videos/bestending.mp4"></video>
