--- a/game/index.html
+++ b/game/index.html
@@ -20,7 +20,7 @@
         <audio id="reloadAudio" src="../resources/sounds/reloadaudio.wav"></audio>
         <audio id="gotPonitsAudio" src="../resources/sounds/gotPonitsAudio.wav"></audio>
         <button id="videoControl" type="button" style="display: none;">PLAY</button>
-        <button id="introVideo" type="button">PLAY</button>
+        <button id="introVideo" type="button" onclick="playIntrovideo()">PLAY</button>
 
         <div id="button">
           <img id="bt" src="../resources/images/button.png" width="50px" height="100px" onclick="playGunshot(); updateFirstscene();">
